# ecen674

ecen674_project/: readme.txt  time_spent.txt
ecen674_project/gimbal_gazebo/: CMakeLists.txt  package.xml
ecen674_project/gimbal_gazebo/launch/: gimbal.launch
ecen674_project/gimbal_gazebo/src/: test_plugin.cc
ecen674_project/gimbal_gazebo/worlds/: gimbal (copy).world  gimbal.world
ecen674_project/gimbal_tracking/: CMakeLists.txt  package.xml
ecen674_project/mars/: model.config  model.sdf
project/chapter10/: drawAircraft.m  mavsim_chap10.slx  mavsim_chap10.slx.r2014b  mavsim_chap10_model.slx  mavsim_chap10_model.slx.r2014b  param_chap10.m  path_manager_chap10.m
project/chapter11/: mavsim_chap11.slx  mavsim_chap11_model.slx  param_chap11.m  path_manager.m
project/chapter13/: autopilot.m  camera.m  compute_gains.m  drawEnvironmentCamera.m  geolocation.m  gimbal.m  mavsim_chap13_geolocation.mdl  mavsim_chap13_geolocation_model.mdl  mavsim_chap13_gimbal.mdl  mavsim_chap13_gimbal_model.mdl  param_chap13.m  path_follow.m  path_manager_dubins.m  path_manager_fillet.m  path_manager_line.m  point_gimbal.m  target_motion.m
project/chapter2/: drawVehicle.m  vehicle_animation.slx
project/chapter3/: drawAircraft.m  mav_dynamics.m  mavsim_chap3.slx  param_chap3.m
project/chapter4/: aerosonde.m  drawAircraft.m  mavsim_chap4.slx  param_chap4.m
project/chapter5/: mavsim_chap5.slx  mavsim_chap5.slx.r2014a  mavsim_trim.slx  param_chap5.m
project/chapter6/: autopilot.m  compute_gains.m  mavsim_chap6.slx  mavsim_trim.slx  param_chap6.m
project/chapter7/: sensors.m  (+3 more)
(+33 files in other folders)
